@@ -5,6 +5,7 @@ Next version (not yet released)
  * [Enterprise] When running a Rails app in multithreaded mode, Passenger Enterprise automatically tags Rails logs with the current thread number. This makes it possible to distinguish logs generated by different threads.
  * Fixes permissions issue on Linux when setting OOM score after lowering privileges. Closes GH-1858.
  * [Standalone] Allows raw json envvars in Passengerfile.json. Closes GH-1837.
+ * The TempDirToucher will now periodically reduce its privileges, which also allows it to be killed when passenger is quit in more circumstances. Closes GH-1678.
 
 Release 5.0.30
 --------------
